modules/alb/main.tf
# モジュール定義
module "vpc" {
  source = "../vpc/output"
}

module "ecs" {
  source = "../ecs/output"
}

# リソース作成
# ALB
resource "aws_lb" "alb" {
  name               = "${local.name_prefix}-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = aws_security_group.alb_sg.id
  subnets            = [aws_subnet.public_1a.id, aws_subnet.public_1c.id]

  enable_deletion_protection = false

  tags = { merge(local.common_tags, {
    Name = "${local.name_prefix}-alb"
  })
}}

# ターゲットグループ
resource "aws_lb_target_group" "tg_gp" {
  name     = "ecs-alb-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.vpc.id

  health_check {
    path                = "/"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }
}

# リスナー
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.tg_gp.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tg_gp.arn
  }
}
